--- a/src/styles/display/products/products.scss
+++ b/src/styles/display/products/products.scss
@@ -1,50 +1,76 @@
-.products{
+.products {
   display: flex;
   flex-direction: column;
-  margin-left:8%;
+  margin-left: 8%;
   margin-right: 8%;
-  margin-top:19%;
-  height:150vh;
-  // background-color: red;
-  .header{
+  margin-top: 19%;
+  height: 110vh;
+  background-color: red;
+  .header {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    h3{
+    h3 {
       // margin-left: 1%;
       font-size: 32px;
       // color: #004274;
       font-family: "Bellota-Bold";
     }
-    span{
+    span {
       margin-top: -1%;
       font-size: 16px;
       font-family: "Bellota-Regular";
     }
   }
-  .slidercontroller{
+  .slidercontroller {
     height: 5%;
     // background-color: red;
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    button{
+    button {
       width: 5%;
       // height: 100%;
       border: none;
-      color:#00AEFF;
-      background-color:inherit;
+      color: #00aeff;
+      background-color: inherit;
     }
-    button:nth-child(1){
+    button:nth-child(1) {
       margin-right: 1%;
     }
-    button:hover{
+    button:hover {
       height: 90%;
       border-radius: 4px;
-      background-color: #00AEFF;
+      background-color: #00aeff;
       color: white;
-
+    }
+  }
+  .slider {
+    height: 80%;
+    width: 100%;
+    
+    // transition: all 1.5s ease-in-out;
+    background-color: #00aeff;
+    overflow: hidden;
+    // display: flex;
+    // flex-direction: row;
+    .slidercomponenet {
+      transition: all 1.5s ease-in-out;
+      display: flex;
+      // align-items: center;
+      // justify-content: ;
+      height: 100%;
+      width: 500%;
+      background-color: burlywood;
+    }
+  }
+  .circles {
+    height: 5%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .individual {
     }
   }
 }
