--- a/src/styles/display/productList/item/item.scss
+++ b/src/styles/display/productList/item/item.scss
@@ -116,7 +116,58 @@
       // background: -o-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%);
       // background: -ms-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%);
       background: linear-gradient(to top, rgba(13, 15, 10, 0.404) 70%, transparent 95%);
+      
       // background-color: red;
+      .icons.wrap{
+        width: 100%;
+        align-items: center;
+        // background-color: red;
+        height: 70%;
+        justify-content: center;
+        .header {
+          // margin-top: 3%;
+          // margin-left: 3%;
+          // background-color: aquamarine;
+  
+          // flex: 2;
+          margin-right: 2%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          height: 10%;
+          width: 50%;
+          border: none;
+          border-radius: 2px;
+          span {
+            border-radius: 2px;
+            text-align: center;
+            width: 100%;
+            background-color: #585757;
+            margin-right: 2%;
+            font-size: 12px;
+            font-family: "Bellota-Regular";
+            color: white;
+          }
+        }
+        .individual{
+          display: flex;
+          align-items:center;
+          justify-content: center;
+          // background-color: blue;
+          margin-right: 1%;
+          width: 10%;
+          height: 70%;
+
+          .shadow{
+            display: none;
+            width: 70%;
+          }
+        }
+        .individual:hover{
+          width: 30%;
+          height: 70%;
+        }
+      }
       .icons {
         height: inherit;
         // background-color: red;
@@ -125,6 +176,7 @@
         display: flex;
         margin-bottom: 10%;
         // flex-direction: column;
+        
         .individual:hover {
           display: flex;
           flex-direction: column;
