--- a/src/styles/display/products/Items/item.scss
+++ b/src/styles/display/products/Items/item.scss
@@ -5,7 +5,7 @@
   width: 6.5%;
   display: flex;
   flex-direction: column;
-  background-color: white;
+  background-color:white;
   border: none;
   border-radius: 4px;
   .top:hover {
@@ -17,6 +17,7 @@
   }
   .top {
     height: 50%;
+    width: 100%;
     // background: rgba(0, 0, 0, .65) url("https://i.pinimg.com/564x/22/af/de/22afde433de829005765ad3f4b0199c0.jpg");
     // background-color: ref;
     // flex: 1;
