--- a/src/example/item/list/list.scss
+++ b/src/example/item/list/list.scss
@@ -396,13 +396,14 @@
       }
       button{
         cursor: pointer;
-        width: 60%;
-        height: 20%;
+        width: 70px;
+        height: 30px;
         background-color: #00aeff;
         color: white;
         border: none;
         border-radius: 2px;
       }
+      
     }
   }
 }
