--- a/src/example/locator/locator.scss
+++ b/src/example/locator/locator.scss
@@ -12,6 +12,13 @@
         cursor: pointer;
         // margin-right: 4%;
   }
+  h3{
+    margin-left: 4%;
+    font-size: 13px;
+        font-family: "Bellota-Light";
+        color: #6C757D;
+        // cursor: pointer;
+  }
   .icon{
     margin-left: 2%;
     display: flex;
