--- a/src/styles/layout/nav/navbar.scss
+++ b/src/styles/layout/nav/navbar.scss
@@ -3,7 +3,8 @@
   width: 100%;
   overflow: visible;
   background-color: #004274;
-  
+  transition      : all 1s ease;
+
   .navitems {
     height: 100%;
     margin-left: 8%;
@@ -18,7 +19,64 @@
       height: inherit;
       // width: 10%;
       // background-color: red;
+      .lines {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        cursor: pointer;
+        transition      : all 2s ease;
 
+        // background-color: red;
+        .single {
+          transition      : all 2s ease;
+
+          // margin-top: 10%;
+          margin-bottom: 4%;
+          width: 40%;
+          height: 10%;
+          background-color: white;
+          border: none;
+          border-radius: 4px;
+        }
+      }
+      .lines.open {
+        scrollbar-width: none;
+        display: flex;
+        flex-direction: column;
+
+        &::-webkit-scrollbar {
+          display: none;
+        }
+
+        .single {
+          // margin-top: 14%;
+          transition      : all 2s ease;
+
+          // display: ;
+          &:first-child {
+            // margin-top: 4%;
+            background-color: white;
+            transform: rotate(145deg);
+          }
+
+          &:nth-child(2) {
+            // margin-bottom: 4%;
+            margin-top: -11%;
+            background-color: white;
+
+            transform: rotate(-145deg);
+
+          }
+
+          &:last-child {
+opacity: 0;
+            background-color: white;
+          }
+        }
+      }
       .verticallines {
         height: 100%;
         border-left: 1px solid #00578f;
@@ -49,12 +107,12 @@
       display: flex;
       align-items: center;
       justify-content: flex-end;
-      .accountcircle{
+      .accountcircle {
         color: white;
-        font-size: 30px; 
-        cursor: "pointer"; 
+        font-size: 30px;
+        cursor: "pointer";
       }
-      .accountcircle:hover{
+      .accountcircle:hover {
         color: #00aeff;
       }
       .create {
