--- a/src/example/imagebox/image.scss
+++ b/src/example/imagebox/image.scss
@@ -1,6 +1,6 @@
 .imagebox{
   width: 100%;
-  height:50%;
+  height:120%;
   // background-color: red;
   display: flex;
   flex-direction: column;
@@ -11,14 +11,15 @@
     }
   }
   .image{
+    object-fit:cover;
     width: 100%;
     height: 100%;
   }
 
   .darker{
-    height: 100%;
+    height: 30%;
     position: relative;
-    top: 70%;
+    top: -24%;
     width: 100%;
     // left: 20%;
     background-color: blue;
