--- a/src/example/locator/locator.scss
+++ b/src/example/locator/locator.scss
@@ -1,11 +1,12 @@
 .locating{
   // margin-left: 1%;
   // background-color: red;
+  // width: 20%;
   height: 100%;
   display: flex;
   align-items: center;
   span{
-    margin-left: 4%;
+    margin-left: 2px;
     font-size: 13px;
         font-family: "Bellota-Light";
         color: #00aeff;
@@ -13,14 +14,14 @@
         // margin-right: 4%;
   }
   h3{
-    margin-left: 4%;
+    margin-left: 2px;
     font-size: 13px;
         font-family: "Bellota-Light";
         color: #6C757D;
         // cursor: pointer;
   }
   .icon{
-    margin-left: 2%;
+    margin-left: 2px;
     display: flex;
     align-items: center;
     justify-content: center;
