--- a/src/styles/layout/nav/loginmodal/loginModal.scss
+++ b/src/styles/layout/nav/loginmodal/loginModal.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   width: inherit;
   height: inherit;
-  background-color: red;
+  // background-color: red;
   .loginheader{
     display: flex;
     align-items: center;
