--- a/src/example/coloredBox/colored.scss
+++ b/src/example/coloredBox/colored.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  span {
+  .coloredspan {
     font-size: 12px;
     font-family: "Bellota-Regular";
     color: white;
