--- a/src/example/imagebox/image.scss
+++ b/src/example/imagebox/image.scss
@@ -1,9 +1,10 @@
 .imagebox{
   width: 100%;
-  height:120%;
+  height:100%;
   // background-color: red;
-  display: flex;
-  flex-direction: column;
+  // display: flex;
+ 
+  // flex-direction: column;
   &:hover{
     .darker{
     background-color: transparent;
@@ -11,18 +12,33 @@
     }
   }
   .image{
+    // border-radius: 16px;
     object-fit:cover;
     width: 100%;
     height: 100%;
+  }
+  .image.withborder{
+    &:hover{
+      filter: brightness(50%);
+    }
+    
+
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
+  }
+
+  .image:hover{
+    background: linear-gradient(to top, rgba(13, 15, 10, 0.404) 70%, transparent 95%);
+
   }
 
   .darker{
     height: 30%;
     position: relative;
-    top: -24%;
+    top: -35%;
     width: 100%;
     // left: 20%;
-    background-color: blue;
+    // background-color: blue;
     // background-color: rgba(13, 15, 10, 0.404);
      
       background: linear-gradient(to top, rgba(13, 15, 10, 0.404) 70%, transparent 95%);
