--- a/src/example/item/pictured/items.scss
+++ b/src/example/item/pictured/items.scss
@@ -190,6 +190,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    // background-color: red;
     .bottomfirst {
       margin-top: 4%;
       display: flex;
