--- a/src/styles/display/display.scss
+++ b/src/styles/display/display.scss
@@ -3,7 +3,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-
+// background-color: red;
   .adjusting{
     opacity: 1;
     width: 100%;
