--- a/src/styles/display/products/Items/productsingleitem.scss
+++ b/src/styles/display/products/Items/productsingleitem.scss
@@ -1,4 +1,4 @@
-.item { margin-top: 20px;
+.productsingleitem { margin-top: 20px;
   height: 95%;
   margin-right: 0.2%;
   width: 6.5%;
@@ -7,6 +7,9 @@
   background-color:white;
   border: none;
   border-radius: 4px;
+  box-shadow: 0px 13px 5px 0px rgba(0,0,0,0.22);
+  -webkit-box-shadow: 0px 13px 5px 0px rgba(0,0,0,0.22);
+  -moz-box-shadow: 0px 13px 5px 0px rgba(0,0,0,0.22);
   .top:hover {
     .secondinsideimg {
       // background-color: rgba(13, 15, 10, 0.404);
