got the pinterest layout working now just need to tidy things up more and trying to make the layout for the firms page more icture esque instead of list view

--- a/src/App.css
+++ b/src/App.css
@@ -34,3 +34,7 @@
   src: local("Risque-Regular"),
   url("./assets/fonts/Risque-Regular.ttf");
 }
+.App{
+  /* overflow-y: scroll; */
+  scroll-behavior: smooth;
+}
