--- a/src/styles/pages/firms/singlefirm/singlefirm.scss
+++ b/src/styles/pages/firms/singlefirm/singlefirm.scss
@@ -24,6 +24,7 @@
       // background-color: orange;
     }
     .firmholdertitle{
+      // color: white;
       font-size: 23px;
       font-family: "Bellota-Bold";
       margin-bottom: -0.1%;
